Fix CORS configuration for login